# cardputer-adv-lofi-player

./: .gitignore  CMakeLists.txt  README.ja.md  README.md  README.zh-CN.md  partitions.csv  sdkconfig  sdkconfig.debug.defaults  sdkconfig.defaults  sdkconfig.release.defaults
.agents/skills/lofi-cardputer-development/: SKILL.md
.agents/skills/lofi-cardputer-development/agents/: openai.yaml
.agents/skills/lofi-cardputer-development/references/: audio-playback-state.md  known-traps.md  project-map.md  serial-hardware-debug.md  ui-assets.md  verification.md
.github/workflows/: release-firmware.yml
assets/footer_icons/: footer_icons.pbm  manifest.example.json  manifest.json
docs/: debug-tools.md
docs/webflash/: app.js  index.html  style.css
docs/webflash/releases/: index.json
docs/webflash/releases/0.1.0/: webflash-manifest.json
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  board_pins.h  idf_component.yml  lofi_audio.cpp  lofi_audio.hpp  lofi_board.cpp  lofi_board.hpp  lofi_cjk_font.hpp  lofi_font_fusion_pixel_10.c  lofi_font_fusion_pixel_8.c  lofi_font_fusion_pixel_ui_12.c  lofi_font_fusion_pixel_ui_16.c  lofi_font_fusion_pixel_ui_20.c  lofi_footer_icons.hpp  lofi_selftest_mp3.hpp  lofi_volume_icons.hpp
main/generated_icons/: boot_cassette_rgb565.c  library_center_rgb565.c  library_i1_88.c  library_side_rgb565.c  lofi_center_rgb565.c  lofi_i1_88.c  lofi_side_rgb565.c  now_center_rgb565.c  now_playing_i1_88.c  now_side_rgb565.c  queue_center_rgb565.c  queue_i1_88.c  queue_side_rgb565.c  settings_center_rgb565.c  settings_i1_88.c  settings_side_rgb565.c
scripts/: generate_volume_icons.py  package_webflash.py
src/: lofi_aac_cache.cpp  lofi_aac_cache.hpp  lofi_build_config.hpp  lofi_core.cpp  lofi_core.hpp  lofi_dsp.cpp  lofi_dsp.hpp  lofi_input.cpp  lofi_input.hpp  lofi_storage.cpp  lofi_storage.hpp  lofi_wav.cpp  lofi_wav.hpp
